<resources>
    <string name="app_name">RecursosHumanos</string>
    <string name="texto_descricao">Este é o nosso aplicativo de cadastro de funcionáries, aqui vamos cadastrar as informações e calcular o salário do funcionarie!</string>
    <string name="cadastro_de_informaces">Cadastro de informações</string>
    <string name="nome_e_sobrenome">Nome e sobrenome</string>
    <string name="valor_por_hora">Valor por hora</string>
    <string name="horas_trabalhadas">Horas Trabalhadas</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="salario_a_receber">Salário a Receber</string>
    <string name="calcular_salario">Calcular salário</string>
    <string name="titulo_RH">Recursos Humanos</string>
    <string name="nome">Nome</string>
</resources>